# tinyx86

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: lib.rs  main.rs  serial.rs  vga.rs
tests/: basic_boot.rs  should_panic.rs
