[package]
name = "tinyx86"
version = "0.1.0"
edition = "2021"


[dependencies]
bootloader = "0.10.13"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
spin = "0.9.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
test-args = [
	"-device",	"isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial",	"stdio",
	"-display",	"none",
]
test-timeout = 300			# in seconds (5 minutes)
test-success-exit-code = 33	# (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false
